--- a/flutter_application_1/lib/l10n/app_ar.arb
+++ b/flutter_application_1/lib/l10n/app_ar.arb
@@ -269,5 +269,85 @@
   "forYourSecurity": "لسلامتك، يرجى استخدام كلمة مرور قوية لا تستخدمها في مكان آخر.",
   "newPassword": "كلمة المرور الجديدة",
   "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
-  "updatePasswordBtn": "تحديث كلمة المرور"
-}
+  "updatePasswordBtn": "تحديث كلمة المرور",
+  "failedToLoadFamilies": "فشل في تحميل العائلات: {error}",
+  "pickDate": "اختر التاريخ",
+  "saving": "جاري الحفظ...",
+  "failedToCreateFamily": "فشل إنشاء العائلة: {error}",
+  "failedToUpdateFamily": "فشل تحديث العائلة: {error}",
+  "confirmDeleteFamily": "حذف {name} وجميع الفئات الفرعية الخاصة بها؟",
+  "failedToDeleteFamily": "فشل حذف العائلة: {error}",
+  "reset": "إعادة ضبط",
+  "familyLabel": "العائلة",
+  "pageOf": "الصفحة {current} من {total}",
+  "allFamilies": "كل العائلات",
+  "allSubfamilies": "كل الفئات الفرعية",
+  "selectFamilyFirst": "اختر عائلة أولاً",
+  "selectedCount": "{count} محدد",
+  "failedWithError": "فشل: {error}",
+  "deleteSelected": "حذف المحدد",
+  "confirmDeleteSelectedRequests": "هل أنت متأكد من حذف {count} طلبًا؟ لا يمكن التراجع عن ذلك.",
+  "deletedRequests": "تم حذف {count} طلبًا",
+  "failedToDeleteRequests": "فشل الحذف: {error}",
+  "accessDeniedAdmin": "تم الرفض — مخصص للمسؤولين فقط",
+  "appVersionLabel": "الإصدار {version}",
+  "purchaseOrderTitle": "أمر الشراء",
+  "idLabel": "المعرف: {id}",
+  "createdLabel": "أنشئ في: {date}",
+  "updatedLabel": "تم التحديث في: {date}",
+  "supplierLabel": "المورد",
+  "supplierDeliveryDate": "تاريخ تسليم المورد",
+  "noteLabel": "ملاحظة",
+  "statusLabel": "الحالة",
+  "priorityLabel": "الأولوية: {priority}",
+  "archivedRequests": "تم أرشفة {count} طلبًا",
+  "unarchivedRequests": "تم إلغاء أرشفة {count} طلبًا",
+  "archiveSelected": "أرشفة المحدد",
+  "unarchiveSelected": "إلغاء أرشفة المحدد",
+  "archive": "أرشفة",
+  "unarchive": "إلغاء الأرشفة",
+  "createdBy": "أنشأه",
+  "validatedBy": "تمت الموافقة من قبل",
+  "editPurchaseRequest": "تحرير طلب الشراء",
+  "confirmCancelUnsavedChanges": "هل أنت متأكد أنك تريد الإلغاء؟ سيتم فقدان التغييرات غير المحفوظة.",
+  "filterByFamily": "تصفية حسب العائلة",
+  "filterBySubfamily": "تصفية حسب الفئة الفرعية",
+  "purchaseOrders": "أوامر الشراء",
+  "archivePurchaseOrders": "أرشفة أوامر الشراء",
+  "unarchivePurchaseOrders": "إلغاء أرشفة أوامر الشراء",
+  "confirmArchivePurchaseOrders": "هل أنت متأكد أنك تريد {action} {count} أوامر شراء محددة؟",
+  "archivedPurchaseOrders": "تم أرشفة {count} أوامر شراء",
+  "unarchivedPurchaseOrders": "تم إلغاء أرشفة {count} أوامر شراء",
+  "deletePurchaseOrders": "حذف أوامر الشراء",
+  "confirmDeletePurchaseOrders": "هل أنت متأكد من حذف {count} أوامر شراء محددة؟ لا يمكن التراجع عن ذلك.",
+  "deletedPurchaseOrders": "تم حذف {count} أوامر شراء",
+  "failedToDeletePurchaseOrders": "فشل الحذف: {error}",
+  "deletePurchaseOrder": "حذف أمر الشراء",
+  "purchaseOrderDeleted": "تم حذف أمر الشراء {id}",
+  "failedToDeletePurchaseOrder": "فشل حذف أمر الشراء: {error}",
+  "archivedPurchaseOrder": "تم أرشفة أمر الشراء {id}",
+  "unarchivedPurchaseOrder": "تم إلغاء أرشفة أمر الشراء {id}",
+  "failedToArchivePurchaseOrder": "فشل أرشفة أمر الشراء: {error}",
+  "viewPurchaseOrder": "عرض أمر الشراء {id}",
+  "purchaseOrdersTable": "جدول أوامر الشراء",
+  "idShort": "المعرف",
+  "priorityShort": "الأولوية",
+  "actions": "إجراءات",
+  "invalidSupplierDeliveryDate": "الرجاء إدخال تاريخ تسليم مورد صالح.",
+  "supplierName": "اسم المورد",
+  "refuseReasonLabel": "سبب الرفض",
+  "products": "المنتجات",
+  "subfamilyLabel": "الفئة الفرعية",
+  "unitPrice": "سعر الوحدة",
+  "totalPrice": "السعر الإجمالي",
+  "purchaseOrderApproved": "تمت الموافقة على الطلب!",
+  "purchaseOrderRejected": "تم رفض الطلب!",
+  "currency": "العملة",
+  "addProduct": "إضافة منتج",
+  "invalidDueDate": "الرجاء إدخال تاريخ استحقاق صالح.",
+  "removeProductLine": "حذف سطر المنتج",
+  "totalLabel": "المجموع: {amount}",
+  "pleaseFillAllRequiredFields": "الرجاء ملء جميع الحقول المطلوبة.",
+  "editPurchaseOrder": "تحرير أمر الشراء",
+  "purchaseOrderSaved": "تم حفظ أمر الشراء!"
+}    
