--- a/flutter_application_1/lib/l10n/app_en.arb
+++ b/flutter_application_1/lib/l10n/app_en.arb
@@ -48,6 +48,8 @@
   "users": "Users",
   "password": "Password",
   "purchaseRequest": "Purchase Request",
+  "editPurchaseRequest": "Edit Purchase Request",
+  "confirmCancelUnsavedChanges": "Are you sure you want to cancel? Unsaved changes will be lost.",
   "purchaseOrder": "Purchase Order",
   "rolesAccess": "Roles and access",
   "settings": "Settings",
@@ -255,5 +257,84 @@
   "forYourSecurity": "For your security, please use a strong password that you do not use elsewhere.",
   "newPassword": "New password",
   "confirmNewPassword": "Confirm new password",
-  "updatePasswordBtn": "Update password"
-}
+  "updatePasswordBtn": "Update password",
+  "failedToLoadFamilies": "Failed to load families: {error}",
+  "pickDate": "Pick date",
+  "saving": "Saving...",
+  "failedToCreateFamily": "Failed to create family: {error}",
+  "failedToUpdateFamily": "Failed to update family: {error}",
+  "confirmDeleteFamily": "Delete {name} and all its subfamilies?",
+  "failedToDeleteFamily": "Failed to delete family: {error}",
+  "reset": "Reset",
+  "familyLabel": "Family",
+  "pageOf": "Page {current} of {total}",
+  "allFamilies": "All Families",
+  "allSubfamilies": "All Subfamilies",
+  "selectFamilyFirst": "Select a family first",
+  "selectedCount": "{count} selected",
+  "failedWithError": "Failed: {error}",
+  "deleteSelected": "Delete Selected",
+  "confirmDeleteSelectedRequests": "Are you sure you want to delete {count} requests? This cannot be undone.",
+  "deletedRequests": "Deleted {count} requests",
+  "failedToDeleteRequests": "Failed to delete: {error}",
+  "accessDeniedAdmin": "Access denied — admins only",
+  "appVersionLabel": "Version {version}",
+  "purchaseOrderTitle": "Purchase Order",
+  "idLabel": "ID: {id}",
+  "createdLabel": "Created: {date}",
+  "updatedLabel": "Updated: {date}",
+  "supplierLabel": "Supplier",
+  "supplierDeliveryDate": "Supplier Delivery Date",
+  "noteLabel": "Note",
+  "statusLabel": "Status",
+  "priorityLabel": "Priority: {priority}",
+  "archivedRequests": "Archived {count} requests",
+  "unarchivedRequests": "Unarchived {count} requests",
+  "archiveSelected": "Archive Selected",
+  "unarchiveSelected": "Unarchive Selected",
+  "archive": "Archive",
+  "unarchive": "Unarchive",
+  "createdBy": "Created by",
+  "validatedBy": "Validated by",
+  "filterByFamily": "Filter by Family",
+  "filterBySubfamily": "Filter by Subfamily",
+  "purchaseOrders": "Purchase Orders",
+  "archivePurchaseOrders": "Archive Purchase Orders",
+  "unarchivePurchaseOrders": "Unarchive Purchase Orders",
+  "confirmArchivePurchaseOrders": "Are you sure you want to {action} {count} selected purchase orders?",
+  "archivedPurchaseOrders": "{count} purchase orders archived",
+  "unarchivedPurchaseOrders": "{count} purchase orders unarchived",
+  "deletePurchaseOrders": "Delete Purchase Orders",
+  "confirmDeletePurchaseOrders": "Are you sure you want to delete {count} selected purchase orders? This cannot be undone.",
+  "deletedPurchaseOrders": "{count} purchase orders deleted",
+  "failedToDeletePurchaseOrders": "Failed to delete: {error}",
+  "back": "Back",
+  "deletePurchaseOrder": "Delete Purchase Order",
+  "purchaseOrderDeleted": "Purchase order {id} deleted",
+  "failedToDeletePurchaseOrder": "Failed to delete purchase order: {error}",
+  "archivedPurchaseOrder": "Purchase order {id} archived",
+  "unarchivedPurchaseOrder": "Purchase order {id} unarchived",
+  "failedToArchivePurchaseOrder": "Failed to archive purchase order: {error}",
+  "viewPurchaseOrder": "View Purchase Order {id}",
+  "purchaseOrdersTable": "Purchase Orders Table",
+  "idShort": "ID",
+  "priorityShort": "Priority",
+  "actions": "Actions",
+  "invalidSupplierDeliveryDate": "Please enter a valid supplier delivery date.",
+  "supplierName": "Supplier name",
+  "refuseReasonLabel": "Refuse Reason",
+  "products": "Products",
+  "subfamilyLabel": "Subfamily",
+  "unitPrice": "Unit Price",
+  "totalPrice": "Total Price",
+  "purchaseOrderApproved": "Order approved!",
+  "purchaseOrderRejected": "Order rejected!",
+  "currency": "Currency",
+  "addProduct": "Add Product",
+  "invalidDueDate": "Please enter a valid due date.",
+  "removeProductLine": "Remove product line",
+  "totalLabel": "Total: {amount}",
+  "pleaseFillAllRequiredFields": "Please fill all required fields.",
+  "editPurchaseOrder": "Edit Purchase Order",
+  "purchaseOrderSaved": "Purchase order saved!"
+}    
