--- a/flutter_application_1/lib/l10n/app_fr.arb
+++ b/flutter_application_1/lib/l10n/app_fr.arb
@@ -66,6 +66,8 @@
   "users": "Utilisateurs",
   "password": "Mot de passe",
   "purchaseRequest": "Demande d'achat",
+  "editPurchaseRequest": "Modifier la demande d'achat",
+  "confirmCancelUnsavedChanges": "Êtes-vous sûr de vouloir annuler ? Les modifications non enregistrées seront perdues.",
   "purchaseOrder": "Commande d'achat",
   "rolesAccess": "Rôles et accès",
   "settings": "Paramètres",
@@ -270,5 +272,83 @@
   "forYourSecurity": "Pour votre sécurité, veuillez utiliser un mot de passe fort que vous n'utilisez pas ailleurs.",
   "newPassword": "Nouveau mot de passe",
   "confirmNewPassword": "Confirmer le nouveau mot de passe",
-  "updatePasswordBtn": "Mettre à jour le mot de passe"
-}
+  "updatePasswordBtn": "Mettre à jour le mot de passe",
+  "failedToLoadFamilies": "Échec du chargement des familles : {error}",
+  "pickDate": "Choisir une date",
+  "saving": "Enregistrement...",
+  "failedToCreateFamily": "Échec de la création de la famille : {error}",
+  "failedToUpdateFamily": "Échec de la mise à jour de la famille : {error}",
+  "confirmDeleteFamily": "Supprimer {name} et toutes ses sous-familles ?",
+  "failedToDeleteFamily": "Échec de la suppression de la famille : {error}",
+  "reset": "Réinitialiser",
+  "familyLabel": "Famille",
+  "pageOf": "Page {current} sur {total}",
+  "allFamilies": "Toutes les familles",
+  "allSubfamilies": "Toutes les sous-familles",
+  "selectFamilyFirst": "Sélectionnez d'abord une famille",
+  "selectedCount": "{count} sélectionnés",
+  "failedWithError": "Échoué : {error}",
+  "deleteSelected": "Supprimer la sélection",
+  "confirmDeleteSelectedRequests": "Êtes-vous sûr de vouloir supprimer {count} demandes ? Cela ne peut pas être annulé.",
+  "deletedRequests": "{count} demandes supprimées",
+  "failedToDeleteRequests": "Échec de la suppression : {error}",
+  "accessDeniedAdmin": "Accès refusé — réservé aux administrateurs",
+  "appVersionLabel": "Version {version}",
+  "purchaseOrderTitle": "Bon de commande",
+  "idLabel": "ID : {id}",
+  "createdLabel": "Créé : {date}",
+  "updatedLabel": "Mis à jour : {date}",
+  "supplierLabel": "Fournisseur",
+  "supplierDeliveryDate": "Date de livraison fournisseur",
+  "noteLabel": "Note",
+  "statusLabel": "Statut",
+  "priorityLabel": "Priorité : {priority}",
+  "archivedRequests": "Archivé {count} demandes",
+  "unarchivedRequests": "Désarchivé {count} demandes",
+  "archiveSelected": "Archiver la sélection",
+  "unarchiveSelected": "Désarchiver la sélection",
+  "archive": "Archiver",
+  "unarchive": "Désarchiver",
+  "createdBy": "Créé par",
+  "validatedBy": "Validé par",
+  "filterByFamily": "Filtrer par famille",
+  "filterBySubfamily": "Filtrer par sous-famille",
+  "purchaseOrders": "Bons de commande",
+  "archivePurchaseOrders": "Archiver les bons de commande",
+  "unarchivePurchaseOrders": "Désarchiver les bons de commande",
+  "confirmArchivePurchaseOrders": "Êtes-vous sûr de vouloir {action} {count} bons de commande sélectionnés ?",
+  "archivedPurchaseOrders": "{count} bons de commande archivés",
+  "unarchivedPurchaseOrders": "{count} bons de commande désarchivés",
+  "deletePurchaseOrders": "Supprimer les bons de commande",
+  "confirmDeletePurchaseOrders": "Êtes-vous sûr de vouloir supprimer {count} bons de commande sélectionnés ? Ceci est irréversible.",
+  "deletedPurchaseOrders": "{count} bons de commande supprimés",
+  "failedToDeletePurchaseOrders": "Échec de la suppression : {error}",
+  "deletePurchaseOrder": "Supprimer le bon de commande",
+  "purchaseOrderDeleted": "Bon de commande {id} supprimé",
+  "failedToDeletePurchaseOrder": "Échec de la suppression du bon de commande : {error}",
+  "archivedPurchaseOrder": "Bon de commande {id} archivé",
+  "unarchivedPurchaseOrder": "Bon de commande {id} désarchivé",
+  "failedToArchivePurchaseOrder": "Échec de l'archivage du bon de commande : {error}",
+  "viewPurchaseOrder": "Voir le bon de commande {id}",
+  "purchaseOrdersTable": "Table des bons de commande",
+  "idShort": "ID",
+  "priorityShort": "Priorité",
+  "actions": "Actions",
+  "invalidSupplierDeliveryDate": "Veuillez saisir une date de livraison fournisseur valide.",
+  "supplierName": "Nom du fournisseur",
+  "refuseReasonLabel": "Motif de refus",
+  "products": "Produits",
+  "subfamilyLabel": "Sous-famille",
+  "unitPrice": "Prix Unitaire",
+  "totalPrice": "Prix Total",
+  "purchaseOrderApproved": "Bon approuvé !",
+  "purchaseOrderRejected": "Bon rejeté !",
+  "currency": "Devise",
+  "addProduct": "Ajouter un produit",
+  "invalidDueDate": "Veuillez saisir une date d'échéance valide.",
+  "removeProductLine": "Supprimer la ligne de produit",
+  "totalLabel": "Total : {amount}",
+  "editPurchaseOrder": "Modifier le bon de commande",
+  "pleaseFillAllRequiredFields": "Veuillez remplir tous les champs requis.",
+  "purchaseOrderSaved": "Bon de commande enregistré !"
+}   
